--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,18 +12,21 @@
         android:layout_height="18dp" />
 
     <TextView
-        android:radius="10dp"
         android:id="@+id/titol"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:radius="10dp"
         android:text="MOVIE TITLE"
         android:textAlignment="center"
         android:textSize="34sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="415dp"
+        android:layout_height="355dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="true"
+        android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
@@ -34,12 +37,12 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:id="@+id/countDown"
+            android:layout_width="140dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Segons Restants: 27"
+            android:text="Segons Restants: 30"
             android:textAlignment="center" />
 
         <TextView
